--- a/Web Page/package.json
+++ b/Web Page/package.json
@@ -6,12 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.3",
     "http-errors": "~1.6.2",
+    "mongodb": "^3.2.3",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
