--- a/Web Page/package.json
+++ b/Web Page/package.json
@@ -2,8 +2,9 @@
   "name": "final",
   "version": "0.0.0",
   "private": true,
+  "main": "index.hbs",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node webapp.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -11,13 +12,17 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "force-ssl-heroku": "^1.0.2",
     "hbs": "^4.0.3",
+    "http": "0.0.0",
     "http-errors": "~1.6.2",
+    "http-redirect": "0.0.7",
+    "https": "^1.0.0",
     "mongodb": "^3.2.3",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "requests": "^0.2.2"
   },
-  "main": "app.js",
   "devDependencies": {},
   "author": "",
   "license": "ISC",
